--- a/data/components/AWS/CloudTrail.yaml
+++ b/data/components/AWS/CloudTrail.yaml
@@ -27,3 +27,4 @@ satisfies:
         \ security credentials for a role or federated user, or by another AWS service.\
         \ \n- CloudTrail publish Amazon SNS notifications when new log files are delivered\
         \ for 18F staff to review upon log file delivery.\n"
+system: AWS
