--- a/data/components/AWS/OWASPZap.yaml
+++ b/data/components/AWS/OWASPZap.yaml
@@ -28,3 +28,4 @@ satisfies:
         reviewed after each scan and appropriate actions taken on discovery of vulnerabilities.
 
         '
+system: AWS
