--- a/data/components/CloudFoundry/ASG.yaml
+++ b/data/components/CloudFoundry/ASG.yaml
@@ -58,3 +58,4 @@ summary: "Cloud Foundry application security groups control the traffic flowing 
   \ all security groups in the Default Staging set.\n`cf running-security-groups`&colon;\
   \ Displays all security groups in the Default Running set.\n`cf security-group SECURITY-GROUP`&colon;\
   \ Displays details about the specified security group.\n"
+system: CloudFoundry
