--- a/data/components/CloudFoundry/BOSHStemcells.yaml
+++ b/data/components/CloudFoundry/BOSHStemcells.yaml
@@ -20,3 +20,4 @@ satisfies:
       are created with updates to address code issues, while new stemcells are created
       with patches for the latest security fixes to address any underlying operating
       system issues.
+system: CloudFoundry
