--- a/data/components/CloudFoundry/Loggregator.yaml
+++ b/data/components/CloudFoundry/Loggregator.yaml
@@ -92,3 +92,4 @@ satisfies:
         \ be reviewed weekly and if discovery of anomalous audit log content which\
         \ appears to indicate a breach are handled according to the GSA Security Incident\
         \ Handling Guide: CIO IT Security 01-02 Revision 7 (August 18, 2009) requirements. "
+system: CloudFoundry
