--- a/data/components/AWS/AWSServiceCatalog.yaml
+++ b/data/components/AWS/AWSServiceCatalog.yaml
@@ -7,3 +7,4 @@ satisfies:
     CM-2: AWS Service Catalog allows 18F to centrally manage commonly deployed IT
       services, and helps achieve consistent governance and meet compliance requirements,
       while enabling users to quickly deploy only the approved IT services they need.
+system: AWS
