--- a/data/components/AWS/SophosUTM.yaml
+++ b/data/components/AWS/SophosUTM.yaml
@@ -10,4 +10,5 @@ satisfies:
         '
       b: '- Sophos UTM 9 Endpoint Protection is deployed and configured on all instances.
 
-  '
+        '
+system: AWS
