--- a/data/components/CloudFoundry/UAA-LDAP.yaml
+++ b/data/components/CloudFoundry/UAA-LDAP.yaml
@@ -6,3 +6,4 @@ satisfies:
   NIST-800-53:
     AC-1: Cloud Foundry integrates with an organization's Identity Provider (IDP)
       which dictates further account management policies.
+system: CloudFoundry
