--- a/data/components/CloudFoundry/UAA.yaml
+++ b/data/components/CloudFoundry/UAA.yaml
@@ -78,3 +78,4 @@ satisfies:
       the user store and stores user passwords in the UAA database using bcrypt. Bcrypt
       is a blowfish encryption algorithm, which enables cloud foundry to store a secure
       hash of your users' passwords.
+system: CloudFoundry
