Adding a documentation complete category

--- a/data/components/CloudFoundry/Loggregator.yaml
+++ b/data/components/CloudFoundry/Loggregator.yaml
@@ -1,3 +1,4 @@
+documentation_complete: false
 governors:
 - name: Loggregator Diagram
   url: https://raw.githubusercontent.com/cloudfoundry/loggregator/develop/docs/loggregator.png
