transforming documentation to new control struct

--- a/data/components/18F/PEPolicy.yaml
+++ b/data/components/18F/PEPolicy.yaml
@@ -2,5 +2,7 @@ documentation_complete: false
 name: Physical and Environmental Protection Policy for 18F
 satisfies:
   NIST-800-53:
-    PE-1: 18F Policy
+    PE-1:
+      implementation_status: null
+      narrative: 18F Policy
 system: 18F
