--- a/data/components/AWS/ACL.yaml
+++ b/data/components/AWS/ACL.yaml
@@ -2,12 +2,15 @@ documentation_complete: false
 name: Access Control List
 references:
 - name: Access Control List Overview
+  type: URL
   url: http://docs.aws.amazon.com/AmazonS3/latest/dev/acl-overview.html
 satisfies:
   NIST-800-53:
     SC-7:
-      a: '- ACLs, or traffic flow policies, are established on each managed interface,
-        which manage and enforce the flow of traffic.
+      implementation_status: null
+      narrative:
+        a: '- ACLs, or traffic flow policies, are established on each managed interface,
+          which manage and enforce the flow of traffic.
 
-        '
+          '
 system: AWS
