--- a/data/components/CloudFoundry/UAA/component.yaml
+++ b/data/components/CloudFoundry/UAA/component.yaml
@@ -67,7 +67,7 @@ satisfies:
           * Space Manager - managers or other users who need to administer a space
           * Space Developer - application developers or other users who need to manage applications and services in a space
           * Space Auditor	- Can view but not edit the space
-            
+
         b: |
           The UAA API has an enpoint for viewing extensive information about user roles.
     AC-6:
@@ -86,3 +86,8 @@ satisfies:
       narrative:
         a: |
           There are no permitted actions without identification and authentication to Cloud.Gov. The Cloud Controller rejects any broker registration that does not contain a username and password. The Cloud Controller authenticates every request with the Service Broker API using HTTP or HTTPS, depending on which protocol you specify during broker registration.
+    IA-2:
+      implementation_status: null
+      narrative: |
+        The UAA is the identity management service for Cloud Foundry. Its primary role is as an OAuth2 provider, issuing tokens for client applications to use when they act on behalf of Cloud Foundry users. In collaboration with the login server, it authenticates users with their Cloud Foundry credentials, and act as a Single Sign-On (SSO) service using those credentials (or others). It has endpoints for managing user accounts and for registering OAuth2 clients, as well as various other management functions.
+        All users have individually unique identifiers to access and authenticates  to the environment. Shared or group authenticators are not utilized, with the exception of a root administrative account. There are only two authorized users from the DevOps team who has access to the root administrative account.
