Typo in Aaron's email address

--- a/data/markdowns/gitbook/ssp.yaml
+++ b/data/markdowns/gitbook/ssp.yaml
@@ -39,7 +39,7 @@ information_system:
     name: Aaron Snow
     title: Authorizing Official
     organization: 18F/GSA
-    email: aaron.snow.gsa.gov
+    email: aaron.snow@gsa.gov
     street_address: 1800 F Street, NW
     city: Washington
     state: DC
